--- a/it_service_app/Views/_ViewImports.cshtml
+++ b/it_service_app/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using itservicesapp
+﻿@using it_service_app
 
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
