--- a/it_service_app/Views/Shared/_Layout.cshtml
+++ b/it_service_app/Views/Shared/_Layout.cshtml
@@ -8,19 +8,22 @@
     <!--====== Title ======-->
     <title>@ViewBag.Title -IT Solutions & Digital Services</title>
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="user-assets/img/favicon.ico" type="img/png" />
+    <link rel="shortcut icon" href="~/user-assets/img/favicon.ico" type="img/png" />
     <!--====== Bootstrap css ======-->
-    <link rel="stylesheet" href="user-assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/user-assets/css/bootstrap.min.css" />
     <!--====== Slick Slider ======-->
-    <link rel="stylesheet" href="user-assets/css/slick.css" />
+    <link rel="stylesheet" href="~/user-assets/css/slick.css" />
     <!--====== Magnific ======-->
-    <link rel="stylesheet" href="user-assets/css/magnific-popup.css" />
+    <link rel="stylesheet" href="~/user-assets/css/magnific-popup.css" />
     <!--====== Animate CSS ======-->
-    <link rel="stylesheet" href="user-assets/css/animate.min.css" />
+    <link rel="stylesheet" href="~/user-assets/css/animate.min.css" />
     <!--====== Font Awesome ======-->
-    <link rel="stylesheet" href="user-assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="~/user-assets/css/font-awesome.min.css" />
     <!--====== Main Css ======-->
-    <link rel="stylesheet" href="user-assets/css/style.css" />
+    <link rel="stylesheet" href="~/user-assets/css/style.css" />
+
+    @await RenderSectionAsync("Styles",required:false)
+
 </head>
 <body>
     <!--====== Preloader Start ======-->
@@ -34,116 +37,11 @@
     </div>
     <!--====== Preloader End ======-->
     <!--====== Header Part Start ======-->
-    <header class="header-one sticky-header">
-        <div class="header-navigation">
-                <div class="container-fluid d-flex align-items-center justify-content-between container-1470">
-                <div class="header-left">
-                    <div class="site-logo">
-                        <a href="index.html"><img src="~/user-assets/img/logo.png" alt="Omnivus"></a>
-                    </div>
-                </div>
-                <div class="header-right d-flex align-items-center justify-content-end">
-                    <div class="site-nav-menu">
-                        <ul class="primary-menu">
-                            <li class="current">
-                                <a href="index.html">Home</a>
-                                <ul class="submenu">
-                                <li><a href="index.html">Home 1</a></li>
-                                <li><a href="index-2.html">Home 2</a></li>
-                                <li><a href="index-3.html">Home 3</a></li>
-                                <li><a href="index-4.html">Home 4</a></li>
-                                <li><a href="index-5.html">Home 5</a></li>
-                                <li><a href="index-6.html">Home 6</a></li>
-                                <li>
-                                    <a href="#">OnePage</a>
-                                    <ul class="submenu">
-                                        <li><a href="index-onepage.html">Home 1</a></li>
-                                        <li><a href="index-2-onepage.html">Home 2</a></li>
-                                        <li><a href="index-3-onepage.html">Home 3</a></li>
-                                        <li><a href="index-4-onepage.html">Home 4</a></li>
-                                        <li><a href="index-5-onepage.html">Home 5</a></li>
-                                        <li><a href="index-6-onepage.html">Home 6</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            </li>
-                            <li>
-                                <a class="nav-link" href="about.html">About</a>
-                            </li>
-                            <li>
-                                <a href="#">Services</a>
-                                <ul class="submenu">
-                                    <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-details.html">Services Details</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Pages</a>
-                                <ul class="submenu">
-                                    <li><a href="case-study.html">case study</a></li>
-                                    <li><a href="case-details.html">Case Details</a></li>
-                                    <li><a href="coming-soon.html">coming soon</a></li>
-                                    <li><a href="error.html">error</a></li>
-                                    <li><a href="faq.html">faq</a></li>
-                                    <li><a href="pricing.html">pricing</a></li>
-                                    <li><a href="shop.html">shop</a></li>
-                                    <li><a href="shop-details.html">shop Details</a></li>
-                                    <li><a href="cart.html">Cart</a></li>
-                                    <li><a href="checkout.html">Checkout</a></li>
-                                    <li><a href="privacy.html">Privacy</a></li>
-                                    <li><a href="team.html">team</a></li>
-                                    <li><a href="team-details.html">team details</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Blog</a>
-                                <ul class="submenu">
-                                    <li><a href="blog-standard.html">Blog Standard</a></li>
-                                    <li><a href="blog-grid.html">Blog Grid</a></li>
-                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                        <a href="#" class="nav-close"><i class="fal fa-times"></i></a>
-                    </div>
-                    <div class="header-extra d-flex align-items-center">
-                        <div class="shoping-mini-cart">
-                            <a href="#" class="cart-icon"><i class="fal fa-shopping-cart"></i></a>
-                        </div>
-                        <div class="search-widget">
-                            <a href="#" class="search-icon"><i class="fal fa-search"></i></a>
-
-                            <div class="search-form">
-                                <form action="#">
-                                    <input type="search" placeholder="Type keywords & hit enter">
-                                </form>
-
-                                <a href="#" class="search-close"><i class="fal fa-times"></i></a>
-                            </div>
-                        </div>
-                        <div class="offcanvas-widget d-lg-block d-none">
-                            <div class="offcanvas-icon">
-                                <span></span><span></span><span></span>
-                            </div>
-                        </div>
-                        <div class="nav-toggler">
-                            <span></span><span></span><span></span>
-                        </div>
-                        <div class="navbar-btn">
-                            <a href="#">Free Consulting <i class="fal fa-long-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+    <partial name="Partials/_HeaderPartial"/>
     <!--====== Header Part End ======-->
-    <div>
+    
         @RenderBody()
-    </div>
+    
 
     <!--====== Back to top start ======-->
     <div class="back-to-top">
@@ -158,7 +56,7 @@
                 <div class="col-lg-4 col-md-6 col-md-7">
                     <div class="widget about-widget">
                         <div class="logo">
-                            <img src="assets/img/logo-1.1.png" alt="">
+                            <img src="~/user-assets/img/logo-1.1.png" alt="">
                         </div>
                         <p>The web has changed a lot since Vitaly posted his first article back in 2006. The team at Smashing has changed too, as have the things that we bring to our community onferences, books, and our membership added to the online magazine.</p>
                         <p>One thing that hasn’t changed is that we’re a small team — with most of us not working</p>
@@ -206,26 +104,28 @@
     <!--====== Footer PART ENDS ======-->
 
     <!--====== Jquery ======-->
-    <script src="user-assets/js/jquery-1.12.4.min.js"></script>
+    <script src="~/user-assets/js/jquery-1.12.4.min.js"></script>
     <!--====== Bootstrap ======-->
-    <script src="user-assets/js/bootstrap.bundle.min.js"></script>
+    <script src="~/user-assets/js/bootstrap.bundle.min.js"></script>
     <!--====== Slick slider ======-->
-    <script src="user-assets/js/slick.min.js"></script>
+    <script src="~/user-assets/js/slick.min.js"></script>
     <!--====== Magnific ======-->
-    <script src="user-assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="~/user-assets/js/jquery.magnific-popup.min.js"></script>
     <!--====== Isotope ======-->
-    <script src="user-assets/js/isotope.pkgd.min.js"></script>
+    <script src="~/user-assets/js/isotope.pkgd.min.js"></script>
     <!--====== Imagesloaded ======-->
-    <script src="user-assets/js/imagesloaded.pkgd.min.js"></script>
+    <script src="~/user-assets/js/imagesloaded.pkgd.min.js"></script>
     <!--====== Inview ======-->
-    <script src="user-assets/js/jquery.inview.min.js"></script>
+    <script src="~/user-assets/js/jquery.inview.min.js"></script>
     <!--====== Easy Pie Chart ======-->
-    <script src="user-assets/js/jquery.easypiechart.min.js"></script>
+    <script src="~/user-assets/js/jquery.easypiechart.min.js"></script>
     <!--====== Syotimer ======-->
-    <script src="user-assets/js/jquery.syotimer.min.js"></script>
+    <script src="~/user-assets/js/jquery.syotimer.min.js"></script>
     <!--====== Wow ======-->
-    <script src="user-assets/js/wow.min.js"></script>
+    <script src="~/user-assets/js/wow.min.js"></script>
     <!--====== Main JS ======-->
-    <script src="user-assets/js/main.js"></script>
+    <script src="~/user-assets/js/main.js"></script>
+
+    @await RenderSectionAsync("Scripts",required:false)
 </body>
 </html>
