account /register okay

--- a/it_service_app/Views/Shared/Partials/_FooterPartial.cshtml
+++ b/it_service_app/Views/Shared/Partials/_FooterPartial.cshtml
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="footer-copyright">
-                <p>Copyright By@@ <a href="https://github.com/VedatAydinKaya/it_service_app.git">L.A-SOFTWARECOMPANY</a> - 2022</p>
+                <p>Copyright By@@ <a href="https://github.com/VedatAydinKaya/it_service_app.git" target="_blank">L.A-SOFTWARECOMPANY</a> - 2022</p>
             </div>
         </div>
     </footer>
