--- a/it_service_app/Views/_ViewImports.cshtml
+++ b/it_service_app/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using it_service_app
+@using it_service_app.Models
+@using it_service_app.ViewModels
 
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
+
