--- a/it_service_app/Views/Payment/Index.cshtml
+++ b/it_service_app/Views/Payment/Index.cshtml
@@ -28,7 +28,7 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label asp-for="CardModel.CardNumber"></label>
-                                    <input asp-for="CardModel.CardNumber" id="txtCardNumber"/>
+                                    <input asp-for="CardModel.CardNumber" id="txtCardNumber" />
                                     <span asp-validation-for="CardModel.CardNumber" class="text-danger"></span>
                                 </div>
                             </div>
@@ -58,64 +58,18 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="order-details mt-md-gap-50">
-                        <h3 class="title">Your Order</h3>
+                        <h3 class="title">Ödeme Şecenekleri</h3>
                         <div class="order-table table-responsive">
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th>Product Name</th>
-                                        <th>Total</th>
+                                        <th></th>
+                                        <th>Taksit Sayısı</th>
+                                        <th>Odenecek Tutar</th>
+
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="product-name">
-                                            <a href="#">Note Book Mockup</a>
-                                        </td>
-                                        <td class="product-total">
-                                            <span class="sub-total">$250.00</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="product-name">
-                                            <a href="#">Motivational Book Cover</a>
-                                        </td>
-                                        <td class="product-total">
-                                            <span class="sub-total">$20.00</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="product-name">
-                                            <a href="#">Book Cover Softcover</a>
-                                        </td>
-                                        <td class="product-total">
-                                            <span class="sub-total">$50.00</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="order-subtotal">
-                                            <span>Cart Subtotal</span>
-                                        </td>
-                                        <td class="order-subtotal-price">
-                                            <span class="order-subtotal-amount">$320.00</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="order-shipping">
-                                            <span>Shipping</span>
-                                        </td>
-                                        <td class="shipping-price">
-                                            <span>$30.00</span>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td class="total-price">
-                                            <span>total-price</span>
-                                        </td>
-                                        <td class="product-subtotal">
-                                            <span class="subtotal-amount">$350.00</span>
-                                        </td>
-                                    </tr>
+                                <tbody id="table-installment">
                                 </tbody>
                             </table>
                         </div>
@@ -149,39 +103,51 @@
 @section Scripts{
 
 <script>
-
-    $(document).ready(function(){
-
-        console.log("Jquery Ok");
+    $(document).ready(function() {
+        console.log("Jquery OK");
     });
-    $("#txtCardNumber").keyup(function(){
-
-         var bin=$(this).val();
-         if(bin.length>=6)
-         {
-           console.log(bin);
-              var model = {
-                  binNumber:bin
-             };
-         };
-         $.ajax({
-         
-               url:'@Url.Action("CheckInstallment","Payment")',
-               type:"POST",
-               data:model,
-               dataType:"json",
-               error:function(request,status,error)
-               { 
-                    console.log(request);
-               },
-               success:function(response)
-               { 
-                   console.log(response)
-               }
-         });
-
+    $("#txtCardNumber").keyup(function() {
+        var bin = $(this).val();
+        if (bin.length >=6) {
+            //console.log(bin);
+            var model = {
+                binNumber: bin
+            };
+            $.ajax({
+                url: '@Url.Action("CheckInstallment", "Payment")',
+                type: "POST",
+                data: model,
+                dataType: "json",
+                error: function(request, status, error) {
+                    //console.log(request);
+                },
+                success: function(response) {
+                    //console.log(response);
+                    fillInstallments(response.installmentPrices);
+                }
+            });
+        }
     });
-
+    function fillInstallments(installmentPrices) {
+        $("#table-installment").empty();
+        for (var i = 0; i < installmentPrices.length; i++) {
+            var data = installmentPrices[i];
+            var tr = document.createElement("tr");
+            var td1 = document.createElement("td");
+            var td2 = document.createElement("td");
+            var td3 = document.createElement("td");
+            var radio = document.createElement("input");
+            var label = document.createElement("label");
+            $(radio).attr("type", "radio").attr("name", "install-radio").attr("data", data.installmentNumber).attr("id","rd"+i).appendTo(td1);
+            $(label).attr("for", "rd" + i).html(data.installmentNumber).appendTo(td1);
+            $(td2).html(data.price);
+            $(td3).html(data.totalPrice);
+            $(tr).append(td1).append(td2).append(td3).appendTo($("#table-installment"));
+        }
+        
+        
+        
+    }
 </script>
 
 }
