--- a/it_service_app/Views/Payment/Index.cshtml
+++ b/it_service_app/Views/Payment/Index.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
         <form method="post" asp-action="Index" asp-controller="Payment">
-            <input form="Installment" type="hidden" itemid="hdInstallment" value="1"/>
+            <input form="Installment" type="hidden" id="hdInstallment" value="1"/>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="billing-details">
