--- a/it_service_app/Views/Payment/Index.cshtml
+++ b/it_service_app/Views/Payment/Index.cshtml
@@ -12,8 +12,8 @@
         <div class="user-actions mb-40">
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
-        <form method="post" asp-action="Index" asp-controller="Payment">
-            <input form="Installment" type="hidden" id="hdInstallment" value="1"/>
+        <form asp-action="Index" method="post">
+            <input asp-for="Installment" type="hidden" id="hdInstallment" value="1" />
             <div class="row">
                 <div class="col-lg-6">
                     <div class="billing-details">
@@ -59,15 +59,14 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="order-details mt-md-gap-50">
-                        <h3 class="title">Ödeme Şecenekleri</h3>
+                        <h3 class="title">Ödeme Seçenekleri</h3>
                         <div class="order-table table-responsive">
                             <table class="table">
                                 <thead>
                                     <tr>
                                         <th></th>
                                         <th>Taksit Sayısı</th>
-                                        <th>Odenecek Tutar</th>
-
+                                        <th>Ödenecek Tutar</th>
                                     </tr>
                                 </thead>
                                 <tbody id="table-installment">
@@ -75,7 +74,7 @@
                             </table>
                         </div>
                         <div class="payment-box mt-30">
-                          <input type="submit" class="main-btn" value="Odeme Yap"/>
+                            <input type="submit" class="main-btn" value="Ödeme Yap" />
                         </div>
                     </div>
                 </div>
@@ -84,12 +83,13 @@
     </div>
 </section>
 <!--====== Shoping Checkout End ======-->
-@section Scripts{
-
+@section Scripts
+{
 <script>
     $(document).ready(function() {
         console.log("Jquery OK");
     });
+
     $("#txtCardNumber").keyup(function() {
         var bin = $(this).val();
         if (bin.length >=6) {
@@ -112,7 +112,8 @@
             });
         }
     });
-   function fillInstallments(installmentPrices) {
+
+    function fillInstallments(installmentPrices) {
         $("#table-installment").empty();
         for (var i = 0; i < installmentPrices.length; i++) {
             var data = installmentPrices[i];
@@ -122,22 +123,25 @@
             var td3 = document.createElement("td");
             var radio = document.createElement("input");
             var label = document.createElement("label");
+
             $(radio).attr("type", "radio").attr("name", "install-radio").attr("data", data.installmentNumber).attr("id","rd"+i).appendTo(td1);
             $(label).attr("for", "rd" + i).html(data.installmentNumber).appendTo(td1);
 
             $(radio).on('change', function() {
                 $("#hdInstallment").val($(this).attr("data"));
             });
+
             if (i == 0) {
                 $(radio).prop('checked',true);
             }
+
             $(td2).html(data.price);
             $(td3).html(data.totalPrice);
+
             $(tr).append(td1).append(td2).append(td3).appendTo($("#table-installment"));
         }
     }
 </script>
-
 }
 
 @section Styles
