dxgrid users done && export to excel

--- a/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
+++ b/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
@@ -40,14 +40,10 @@
     </div><!--end row-->
 
 </div>
-@section Styles{
- 
-     <link  rel="stylesheet" href="~/vendor/devextreme/dist/css/dx.light.css"/>
-}
+
 @section Scripts{
 
-  <script  type="text/javascript" src="~/vendor/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="~/vendor/devextreme/dist/js/dx.all.js"></script>
+
   <script>
  
     $(()=>{
@@ -56,7 +52,7 @@
 
           $.ajax({
 
-               url:'@Url.Action("GetTest","UserApi")',
+               url:'@Url.Action("GetUsers","UserApi")',
                method:'GET',
                success:function(response){
 
@@ -83,9 +79,58 @@
               
               $('#dxGrid').dxDataGrid({
               
-                   dataSource:userData,
-                   columns:['name','surname','email'],
+                   showColumnLines:true,
+                   allowColumnResizing:true,
+                   showRowLines:true,
+                   rowAlternationEnabled:true,
                    showBorders:true,   
+                   dataSource:userData,
+                   searchPanel:{
+                         visible:true,
+                         width:240,
+                         placeholder:"Ara..."
+                   },
+                   filterRow:{
+                       visible:true,
+                       applyFilter:"auto"
+                   },
+                   headerFilter:{
+                    visible:true
+                   },
+                   export: {
+                    enabled: true,
+                    fileName: `Tüm Kullanıcılar_${parseInt(Math.random() * 1000000000)}`,
+                    allowExportSelectedData: true
+                },
+                   paging:{
+                   pageSize:20
+                   },
+                   pager:{
+                    showPageSizeSelector:true,
+                    allowedPageSizes:[5,15,30,45],
+                    showInfo:true
+                   },
+                   columns:[
+                       {
+                           caption:'Id',
+                           dataField:"Id",
+                           visible:false,
+                           allowFiltering:false
+                       },
+                       {
+                          caption:'Ad',
+                          caption:'Ad',
+                          dataField:"name"
+                       },
+                       {
+                             caption:'Soyad',
+                             dataField:"surname"
+                       },
+                        {
+                             caption:'Email',
+                             dataField:"email"
+                       }
+                   ]
               });
           }
     
