dxgrid created date cell added

--- a/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
+++ b/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
@@ -135,6 +135,13 @@
                              dataField:"email"
                        },
                        {
+                             caption:'Kayıt Tarihi',
+                             dataField:"createdDate",
+                             dataType:"date",
+                             format:'dd/MM/yyyy',
+                             sortOrder:"desc"
+                       },
+                       {
                            caption:'Detay',
                            cellTemplate:function(container,options)
                            {
