--- a/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
+++ b/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
@@ -58,9 +58,13 @@
                 remoteOperations: { paging: true, filtering: true, sorting: true, grouping: true, summary: true, groupPaging: true },
                 dataSource: DevExpress.data.AspNet.createStore({
                     key: 'id',
-                    loadUrl: `${url}/getusers`
-                   
+                    loadUrl: `${url}/getusers`,
+                    updateUrl:`${url}/updateusers`
                 }),
+                  editing: {
+                    mode: 'form',
+                    allowUpdating: true
+                },
                 showColumnLines: true,
                 allowColumnResizing: true,
                 showRowLines: true,
@@ -99,7 +103,8 @@
                         caption: 'Id',
                         dataField: "id",
                         visible: false,
-                        allowFiltering: false
+                        allowFiltering: false,
+                        formItem:{visible:false}
                     },
                     {
                         caption: 'Ad',
@@ -135,7 +140,8 @@
                                 .addClass('btn btn-block btn-info btn-sm')
                                 .appendTo(container);
 
-                        }
+                        },
+                        formItem:{visible:false}
                     }
                 ]
             }).dxDataGrid("instance");
