address api #crud

--- a/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
+++ b/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
@@ -60,7 +60,7 @@
                     key: 'id',
                     loadUrl: `${url}/getusers`,
                     updateUrl: `${url}/updateusers`
-                   
+
                 }),
                 editing: {
                     mode: 'form',
@@ -148,31 +148,73 @@
                 masterDetail: {
                     enabled: true,
                     template(container, options) {
-                        var currentUser = options.data;
+                        var current = options.data;
                         $('<div>')
                             .dxDataGrid({
                                 columnAutoWidth: true,
                                 showBorders: true,
-                                columns: ['Subject', {
-                                    dataField: 'StartDate',
-                                    dataType: 'date',
-                                }, {
-                                    dataField: 'DueDate',
-                                    dataType: 'date',
-                                }, 'Priority', {
-                                    caption: 'Completed',
-                                    dataType: 'boolean',
-                                    calculateCellValue(rowData) {
-                                        return rowData.Status === 'Completed';
+                                columns: [
+                                    {
+                                        caption : "Adres",
+                                        dataField: "line"
                                     },
-                                }],
+                                    {
+                                        caption : "Posta Kodu",
+                                        dataField: "postCode"
+                                    },
+                                    {
+                                        caption : "Adres Tipi",
+                                        dataField: "addressType"
+                                    },
+                                    {
+                                        caption : "İl",
+                                        dataField: "state.city.name",
+                                        lookup: {
+                                            dataSource: {
+                                                store: DevExpress.data.AspNet.createStore({
+                                                    key: "id",
+                                                    loadUrl: "../../../api/addressapi/citylookup"
+                                                }),
+                                                _fnFeatureHtmlPaginate: true,
+                                                pageSize: 10
+                                            },
+                                            displayExpr: "text",
+                                            valueExpr: "value"
+                                        }
+                                    },
+                                    {
+                                        caption : "İlçe",
+                                        dataField: "state.name",
+                                        lookup: {
+                                            dataSource: {
+                                                store: DevExpress.data.AspNet.createStore({
+                                                    key: "id",
+                                                    loadUrl: "../../../api/addressapi/statelookup"
+                                                }),
+                                                _fnFeatureHtmlPaginate: true,
+                                                pageSize: 10
+                                            },
+                                            displayExpr: "text",
+                                            valueExpr: "value"
+                                        }
+                                    }
+                                    ],
+                                editing: {
+                                    mode: 'form',
+                                    allowAdding: true,
+                                    allowUpdating: true,
+                                    allowDeleting: true
+                                },
                                 remoteOperations: { paging: true, filtering: true, sorting: true, grouping: true, summary: true, groupPaging: true },
                                 dataSource: DevExpress.data.AspNet.createStore({
                                     key: 'id',
-                                    loadUrl: `${url}/getusers`,
-                                    updateUrl: `${url}/updateusers`
-                                 
-                                }),
+                                    loadUrl: "../../../api/addressapi/get",
+                                    loadParams: { userId: current.id },
+                                    insertUrl: "../../../api/addressapi/insert",
+                                    updateUrl: "../../../api/addressapi/update",
+                                    deleteUrl: "../../../api/addressapi/delete"
+
+                                })
                             }).appendTo(container);
                     },
                 },
