addressapi && subscriptions api doneeee

--- a/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
+++ b/it_service_app/Areas/Admin/Views/Manage/Users.cshtml
@@ -48,8 +48,8 @@
 
 @section Scripts
 {
-<script src="~/vendor/devextreme-aspnet-data/js/dx.aspnet.data.js"></script>
-<script>
+    <script src="~/vendor/devextreme-aspnet-data/js/dx.aspnet.data.js"></script>
+    <script>
     var dataGrid = null;
     $(() => {
         var url = '../../../api/userapi';
@@ -59,8 +59,8 @@
                 dataSource: DevExpress.data.AspNet.createStore({
                     key: 'id',
                     loadUrl: `${url}/getusers`,
-                    updateUrl: `${url}/updateusers`
-               
+                    updateUrl: `${url}/updateusers`,
+                
                 }),
                 editing: {
                     mode: 'form',
@@ -181,20 +181,23 @@
                                             displayExpr: "text",
                                             valueExpr: "value"
                                         }
-                                    }, 
+                                    },
                                     {
                                         caption : "İlçe",
                                         dataField: "state.id",
                                         lookup: {
-                                            dataSource: {
-                                                store: DevExpress.data.AspNet.createStore({
-                                                    key: "id",
-                                                    loadUrl: "../../../api/addressapi/statelookup",
-                                                    
-                                                }),
-                                                _fnFeatureHtmlPaginate: true,
-                                                pageSize: 10
+                                            dataSource(opt) {
+                                                console.log(opt);
+                                                return {
+                                                    store: DevExpress.data.AspNet.createStore({
+                                                        key: "id",
+                                                        loadUrl: "../../../api/addressapi/statelookup"
+                                                    }),
+                                                    filter: opt.data ? ['CityId', '=', opt.data.state.cityId] : null
+                                                };
                                             },
+                                            _fnFeatureHtmlPaginate: true,
+                                            pageSize: 10,
                                             displayExpr: "text",
                                             valueExpr: "value"
                                         }
@@ -206,6 +209,13 @@
                                     allowUpdating: true,
                                     allowDeleting: true
                                 },
+                                onEditorPrepared: function (opt) {
+                                    if (opt.parentType == 'dataRow' && opt.dataField == 'state.city.id') {
+                                        opt.editorElement.dxSelectBox('instance').option('onValueChanged', function (e) {
+                                            console.log(e);
+                                        });
+                                    }
+                                },
                                 remoteOperations: { paging: true, filtering: true, sorting: true, grouping: true, summary: true, groupPaging: true },
                                 dataSource: DevExpress.data.AspNet.createStore({
                                     key: 'id',
@@ -213,8 +223,20 @@
                                     loadParams: { userId: current.id },
                                     insertUrl: "../../../api/addressapi/insert",
                                     updateUrl: "../../../api/addressapi/update",
-                                    deleteUrl: "../../../api/addressapi/delete"
-                                  
+                                    deleteUrl: "../../../api/addressapi/delete",
+
+                                    onBeforeSend(method, ajaxOptions) {
+                                        ajaxOptions.xhrFields = { withCredentials: true };
+                                        if (method === "update") {
+                                            var dataStr = ajaxOptions.data.values;
+                                            var data = JSON.parse(dataStr);
+                                            data.stateId = data.state.id;
+                                            delete data["state"];
+                                            dataStr = JSON.stringify(data);
+                                            ajaxOptions.data.values = dataStr;
+                                        }
+                                        console.log(ajaxOptions);
+                                    }
                                 })
                             }).appendTo(container);
                     },
@@ -224,5 +246,5 @@
 
         loadGrid();
     });
-</script>
+    </script>
 }
