--- a/it_service_app/Views/Home/Index.cshtml
+++ b/it_service_app/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model List<SubscriptionTypeViewModel>
+
+@{
     ViewBag.Title = "Anasayfa";
 }
 
@@ -26,7 +28,7 @@
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
                     <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
-                        <img src="~/user-assets/img/banner/banner-img.png" alt="Banner">
+                        <img src="user-assets/img/banner/banner-img.png" alt="Banner">
                     </div>
                 </div>
             </div>
@@ -55,7 +57,7 @@
                 </div>
                 <div class="col-lg-5 d-none d-lg-block">
                     <div class="banner-img" data-animation="fadeInRight" data-delay="0.5s">
-                        <img src="~/user-assets/img/banner/banner-img.png" alt="Banner">
+                        <img src="user-assets/img/banner/banner-img.png" alt="Banner">
                     </div>
                 </div>
             </div>
@@ -63,4 +65,4 @@
     </div>
 </section>
 
-<partial name="Partials/_PricePartial"/>
+<partial name="Partials/_PricePartial" model="Model"/>
