--- a/it_service_app/Views/Home/Index.cshtml
+++ b/it_service_app/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model List<SubscriptionTypeViewModel>
-
+﻿
 @{
     ViewBag.Title = "Anasayfa";
 }
@@ -65,4 +64,6 @@
     </div>
 </section>
 
-<partial name="Partials/_PricePartial" model="Model"/>
+@*<partial name="Partials/_PricePartial" model="Model"/>*@
+
+@await Component.InvokeAsync("PricingTable")
