--- a/it_service_app/Views/Payment/Purchase.cshtml
+++ b/it_service_app/Views/Payment/Purchase.cshtml
@@ -18,8 +18,23 @@
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
         <form asp-action="Purchase" method="post">
-            <input asp-for="Installment" type="hidden" id="hdInstallment" value="1"/>
-            <input asp-for="Installment" type="hidden" id="Amount" name="Amount" value='@ViewBag.Subs.Price.ToString(new CultureInfo("en-US"))'/>
+            <input asp-for="Installment" type="hidden" id="hdInstallment" value="1" />
+            <input asp-for="Installment" type="hidden" id="Amount" name="Amount"
+                   value='@ViewBag.Subs.Price.ToString(new CultureInfo("en-US"))' />
+            <input type="hidden" asp-for="BasketModel.Id" />
+            <div class="row">
+                <div class="col-md-12">
+                    <select asp-for="AddressModel.Id">
+                        @foreach (AddressViewModel item in ViewBag.Addresses)
+                        {
+                            <option value="@item.Id">@item.Line</option>
+                        }
+                    </select>
+
+                </div>
+            </div>
+
+
             <div class="row">
                 <div class="col-lg-6">
                     <div class="billing-details">
@@ -28,35 +43,35 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label asp-for="CardModel.CardHolderName"></label>
-                                    <input asp-for="CardModel.CardHolderName"/>
+                                    <input asp-for="CardModel.CardHolderName" />
                                     <span asp-validation-for="CardModel.CardHolderName" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label asp-for="CardModel.CardNumber"></label>
-                                    <input asp-for="CardModel.CardNumber" id="txtCardNumber"/>
+                                    <input asp-for="CardModel.CardNumber" id="txtCardNumber" />
                                     <span asp-validation-for="CardModel.CardNumber" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     <label asp-for="CardModel.ExpireMonth"></label>
-                                    <input asp-for="CardModel.ExpireMonth"/>
+                                    <input asp-for="CardModel.ExpireMonth" />
                                     <span asp-validation-for="CardModel.ExpireMonth" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     <label asp-for="CardModel.ExpireYear"></label>
-                                    <input asp-for="CardModel.ExpireYear"/>
+                                    <input asp-for="CardModel.ExpireYear" />
                                     <span asp-validation-for="CardModel.ExpireYear" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="form-group">
                                     <label asp-for="CardModel.Cvc"></label>
-                                    <input asp-for="CardModel.Cvc"/>
+                                    <input asp-for="CardModel.Cvc" />
                                     <span asp-validation-for="CardModel.Cvc" class="text-danger"></span>
                                 </div>
                             </div>
@@ -69,18 +84,18 @@
                         <div class="order-table table-responsive">
                             <table class="table">
                                 <thead>
-                                <tr>
-                                    <th></th>
-                                    <th>Taksit Sayısı</th>
-                                    <th>Ödenecek Tutar</th>
-                                </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th>Taksit Sayısı</th>
+                                        <th>Ödenecek Tutar</th>
+                                    </tr>
                                 </thead>
                                 <tbody id="table-installment">
                                 </tbody>
                             </table>
                         </div>
                         <div class="payment-box mt-30">
-                            <input type="submit" class="main-btn" value="Ödeme Yap"/>
+                            <input type="submit" class="main-btn" value="Ödeme Yap" />
                         </div>
                     </div>
                 </div>
@@ -99,10 +114,10 @@
     $("#txtCardNumber").blur(function() {
         var bin = $(this).val();
         if (bin.length>=6 && bin.length<=16) {
-            //console.log(bin);
+            console.log(bin);
             var model = {
                 binNumber: bin,
-                price=@ViewBag.Subs.Price.ToString(new CultureInfo("en-US"))
+                price:@ViewBag.Subs.Price.ToString(new CultureInfo("en-US"))
             };
             $.ajax({
                 url: '@Url.Action("CheckInstallment", "Payment")',
