--- a/it_service_app/Views/Payment/Purchase.cshtml
+++ b/it_service_app/Views/Payment/Purchase.cshtml
@@ -111,7 +111,7 @@
         console.log("Jquery OK");
     });
 
-    $("#txtCardNumber").blur(function() {
+    $("#shopBasket").blur(function() {
         var bin = $(this).val();
         if (bin.length>=6 && bin.length<=16) {
             console.log(bin);
